<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MenuPrincipal">


    <Button
        android:id="@+id/WishListBut"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/wish_button"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileBut" />

    <Button
        android:id="@+id/ProfileBut"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/profile"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FriendsBut"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/friendslist"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WishListBut" />

    <Button
        android:id="@+id/deconnexion"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/deco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FriendsBut"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_margin="60dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_deconnexion"
        android:padding="15dp"
        android:textColor="#fff"/>


</androidx.constraintlayout.widget.ConstraintLayout>