<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/graylight"
        android:orientation="vertical"
        tools:context="com.example.wishlistproject.ProfileEdition">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="275dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:background="#82C4D9"
                    android:contentDescription="@string/ProfileImage"
                    android:src="@drawable/blank_profile_picture" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:hint="@string/name_info"
                    android:inputType="textPersonName"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_email_black_24dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/telephone"
                    android:src="@drawable/ic_phone_black_24dp" />

                <EditText
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:hint="@string/telephone"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/couleurpref"
                    android:src="@drawable/ic_color_lens_black_24dp" />

                <EditText
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:hint="@string/couleurpref"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/anniversaire"
                    android:src="@drawable/ic_cake_black_24dp" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:spinnersShown="true"></DatePicker>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/shoeSize"
                    android:src="@drawable/ic_pets_black_24dp" />

                <EditText
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:hint="@string/shoeSize"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="25dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/clothes"
                    android:src="@drawable/ic_accessibility_black_24dp" />

                <EditText
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:hint="@string/clothes"
                    android:inputType="number"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/hobby"
                    android:src="@drawable/ic_color_lens_black_24dp" />

                <EditText
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:hint="@string/hobby"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <Button
                android:id="@+id/RetourBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/retour" />

            <Button
                android:id="@+id/saveChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#85C5DA"
                android:padding="10dp"
                android:text="@string/edit"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>