<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/graylight"
        android:orientation="vertical"
        tools:context="com.example.wishlistproject.ProfileEdition">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="275dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:background="#82C4D9"
                    android:src="@drawable/face"
                    android:contentDescription="@string/ProfileImage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:hint="Elena Luis"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:autofillHints="" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email_black_24dp"
                    android:contentDescription="@string/email"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="elena.luis@hotmail.com"
                    android:textStyle="bold"
                    android:autofillHints=""
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:contentDescription="@string/telephone" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:hint="0475 76 83 25"
                    android:textStyle="bold"
                    android:autofillHints=""
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_color_lens_black_24dp"
                    android:contentDescription="@string/couleurpref" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="Orange"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textStyle="bold"
                    android:autofillHints=""
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/anniversaire"
                    android:src="@drawable/ic_cake_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:hint="5 juillet 1986"
                    android:paddingStart="20dp"
                    android:paddingEnd="25dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_pets_black_24dp"
                    android:contentDescription="@string/shoeSize" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="Pointure : 41"
                    android:paddingStart="20dp"
                    android:paddingEnd="25dp"
                    android:textStyle="bold"
                    android:autofillHints=""
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_accessibility_black_24dp"
                    android:contentDescription="@string/clothes" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="Taille de vêtements : M"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textStyle="bold"
                    android:autofillHints=""
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_games_black_24dp"
                    android:contentDescription="@string/hobby" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="J'aime la natation et lire"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textStyle="bold"
                    android:autofillHints=""
                     />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <Button
                android:layout_width="wrap_content"
                android:id="@+id/editProfile"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="#85C5DA"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/modif"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#85C5DA"
                android:text="@string/menu"
                />


        </LinearLayout>

    </LinearLayout>
</ScrollView>