<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreationCompte">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_account_circle"
        app:layout_constraintBottom_toTopOf="@+id/etUsernameCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <EditText
        android:id="@+id/etUsernameCreation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:textColor="#6591c4"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.911" />


    <EditText
        android:id="@+id/etPasswordCreation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColor="#6591c4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <EditText
        android:id="@+id/etConfirmPasswordCreation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:paddingStart="30dp"
        android:textColor="#6591c4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/etPasswordCreation"

        app:layout_constraintVertical_bias="0.242" />

    <Button
        android:id="@+id/btnSignUpCreation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/confirm_account"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/etPasswordCreation"
        app:layout_constraintVertical_bias="0.577" />

</androidx.constraintlayout.widget.ConstraintLayout>